--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
 }
 
 .main{
-    background-image: url("assets/Images/bg.png");
+    background-image: url("bg.png");
     background-position: center center;
     background-size: max(1200px,100vw);
     background-repeat: no-repeat;
@@ -274,4 +274,5 @@ footer{
     
     
     
+
     
